--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,16 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
-
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 version = "0.0.1"
 dependencies = ["h5py", "geopandas"]
+
+[project.optional-dependencies]
+dev = ["pytest"]
 
 [project.urls]
 repository = "https://github.com/fema-ffrd/rashdf"
