Specify environment for release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - "*.*.*"
+      - "v*.*.*"
 
 permissions:
   contents: read
@@ -12,6 +12,7 @@ jobs:
   release:
     name: release
     runs-on: ubuntu-latest
+    environment: release-env
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
