--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,10 @@
     "python.testing.pytestArgs": [
         "."
     ],
-    "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-    "python.formatting.provider": "none",
-    "editor.formatOnSave": true,
-    "python.formatting.blackArgs": [
-        "--line-length=120"
-    ],
-    "python.languageServer": "Pylance",
-    "python.linting.lintOnSave": true,
+    "python.testing.unittestEnabled": false,
     "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter"
+        "editor.defaultFormatter": "charliermarsh.ruff",
+        "editor.formatOnSave": true
     }
 }
