--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -42,8 +42,8 @@ jobs:
 
     - name: Lint (ruff)
       run: |
-        ruff
-        ruff-format --check
+        ruff check
+        ruff format --check
 
     - name: Test with pytest
       run: |
