--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-version = "0.1.0-beta.1"
+version = "0.1.0"
 dependencies = ["h5py", "geopandas"]
 
 [project.optional-dependencies]
