--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,17 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-version = "0.1.1"
-dependencies = ["h5py", "geopandas"]
+version = "0.2.0"
+dependencies = ["h5py", "geopandas", "pyarrow"]
 
 [project.optional-dependencies]
 dev = ["pre-commit", "ruff", "pytest"]
 
 [project.urls]
 repository = "https://github.com/fema-ffrd/rashdf"
+
+[project.scripts]
+rashdf = "cli:main"
 
 [tool.pytest.ini_options]
 pythonpath = "src"
