--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,10 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 version = "0.5.0"
-dependencies = ["h5py", "geopandas>=0.14,<0.15", "pyarrow", "xarray"]
+dependencies = ["h5py", "geopandas>=1.0,<2.0", "pyarrow", "xarray"]
 
 [project.optional-dependencies]
-dev = ["pre-commit", "ruff", "pytest", "pytest-cov"]
+dev = ["pre-commit", "ruff", "pytest", "pytest-cov", "fiona"]
 docs = ["sphinx", "numpydoc", "sphinx_rtd_theme"]
 
 [project.urls]
