replaced black-formatted and pylint with charliermash.ruff

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,9 +13,8 @@
 		"vscode": {
 			"extensions": [
 				"ms-python.python",
-				"ms-python.pylint",
-				"GitHub.copilot",
-				"ms-python.black-formatter"
+				"charliermarsh.ruff",
+				"GitHub.copilot"
 			],
 			"settings": {
 				"python.defaultInterpreterPath": "/opt/conda/envs/rashdf/bin/python"
