--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,19 @@ version = "0.8.0"
 dependencies = ["h5py", "geopandas>=1.0,<2.0", "pyarrow", "xarray"]
 
 [project.optional-dependencies]
-dev = ["pre-commit", "ruff", "pytest", "pytest-cov", "kerchunk", "zarr==2.18.2", "dask", "fsspec", "s3fs", "fiona==1.9.6"]
+dev = [
+    "pre-commit",
+    "ruff",
+    "pytest",
+    "pytest-cov",
+    "kerchunk",
+    "zarr==2.18.2",
+    "dask",
+    "fsspec",
+    "s3fs",
+    "fiona==1.9.6",
+    "numcodecs<0.16"
+]
 docs = ["sphinx", "numpydoc", "sphinx_rtd_theme"]
 
 [project.urls]
